--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,2 @@
-language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-# command to run tests
-script: python -m unittest
+language: shell
+script: ./shell/testwrapper.sh
